Compression working